fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -309,7 +309,7 @@ body {
                         }
                         img {
                             max-width: 100%;
-                            // max-height: 50%;
+                            max-height: 50%;
                         }
                     }
                 }
